# learning_demo

./: .gitignore  README.md
01.CMAKE/demo/: CMakeLists.txt  README.md  div.c  mul.c
01.CMAKE/demo1/: CMakeLists.txt  README.md
01.CMAKE/demo1/src/: add.c  main.c
01.CMAKE/demo2/: CMakeLists.txt  README.md
01.CMAKE/demo2/include/: head.h
01.CMAKE/demo2/src/: sub.c
01.CMAKE/demo3/: CMakeLists.txt  README.md
01.CMAKE/demo3/src/: main.c
01.CMAKE/demo4/: CMakeLists.txt  README.md
01.CMAKE/demo4/calc/: CMakeLists.txt  add.c  div.c  mul.c  sub.c
01.CMAKE/demo4/include/: calc.h  sort.h
01.CMAKE/demo4/sort/: CMakeLists.txt  bubbleSort.c  insertSort.c  selectSort.c
01.CMAKE/demo4/src/: CMakeLists.txt  calc.c
01.CMAKE/demo4/test/: CMakeLists.txt  sort.c
01.CMAKE/demo5/: CMakeLists.txt  README.md
01.CMAKE/demo5/math/: CMakeLists.txt
01.CMAKE/demo5/src/: main.c
01.CMAKE/demo6/: CMakeLists.txt  README.md
01.CMAKE/demo7/: CMakeLists.txt  README.md  config.h.in
01.CMAKE/demo7/include/: my_math.h
01.CMAKE/demo7/math/: CMakeLists.txt  math.c
01.CMAKE/demo7/src/: main.c
